--- a/KnightOwlMVC/KnightOwlMVC.csproj
+++ b/KnightOwlMVC/KnightOwlMVC.csproj
@@ -168,14 +168,11 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\EventsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201601242359333_Initial Migration.cs" />
-    <Compile Include="Migrations\201601242359333_Initial Migration.Designer.cs">
-      <DependentUpon>201601242359333_Initial Migration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -220,11 +217,11 @@
     <Compile Include="Models\WebModels\ApplicationSettings.cs" />
     <Compile Include="Models\WebModels\Lookups.cs" />
     <Compile Include="Models\WebModels\MobileSetting.cs" />
-    <Compile Include="Models\WebModels\Notification.cs" />
     <Compile Include="Models\WebModels\PaymentSetting.cs" />
     <Compile Include="Models\WebModels\StaffUsers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\DashboardViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\css\animate.css" />
@@ -912,6 +909,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Events\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -919,11 +917,6 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201601242359333_Initial Migration.resx">
-      <DependentUpon>201601242359333_Initial Migration.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
